tdf#165061 CairoSDPR: regression: Fix RTL usage

See comments in task, for now disable using SDPR when RTL is
enabled.

Change-Id: I9dabe2324fb9e6b190ebb3851dc73b2c7dacf84d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181604
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>